--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -1,3 +1,11 @@
-<div>
-  <h1>Express Home</h1>
-</div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <%- include('./partials/head') %> 
+</head>
+<body>
+  <header>
+    <%- include('./partials/header') %> 
+  </header>
+</body>
+</html>
