--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -7,5 +7,8 @@
   <header>
     <%- include('./partials/header') %> 
   </header>
+  <main>
+    <%- include('./partials/about') %> 
+  </main>
 </body>
 </html>
