--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -3,6 +3,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <link rel="stylesheet" href="/css/style.css" />
 <style>
-  @import url("https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Rubik:wght@400;700&display=swap");
+  @import url("https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Rubik:wght@300;400;500;700&display=swap");
 </style>
 <title>Trafico</title>
