--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -2,7 +2,7 @@
   <a class="navbar-brand" href="/"></a>
   <ul class="navbar-nav">
     <li class="nav-item">
-      <a class="nav-link" href="#about">About</a>
+      <a class="nav-link" href="#about-us">About</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="/#how-to">How To</a>
