Add section how to

--- a/src/views/partials/about.ejs
+++ b/src/views/partials/about.ejs
@@ -12,6 +12,6 @@
     </span>
   </div>
   <div>
-    <img src="/img/Illustration.png" alt="worker making the delivery" />
+    <img src="/img/About-illustration.png" alt="worker making the delivery" />
   </div>
 </div>
