--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -179,3 +179,38 @@ body {
   line-height: 3.6rem;
   color: #402b2b;
 }
+
+/* How To */
+#how-to {
+  display: flex;
+  justify-content: center;
+  padding: 10.4rem 0;
+}
+
+.how-to-img img {
+  width: 60rem;
+}
+
+
+.how-to-info {
+  padding-left: 5.8rem;
+  box-sizing: content-box;
+}
+
+.how-to-info h4 {
+  color: #ee4d47;
+  font-size: 2.4rem;
+  font-weight: 700;
+  text-transform: uppercase;
+  line-height: 4rem;
+  letter-spacing: 0.16rem;
+  margin-top: 7.4rem;
+  padding-bottom: 4rem;
+}
+
+.how-to-info p {
+  font-size: 1.8rem;
+  font-weight: 300;
+  line-height: 4rem;
+  padding-bottom: 7rem;
+}
