--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -8,7 +8,8 @@
     <%- include('./partials/header') %> 
   </header>
   <main>
-    <%- include('./partials/about') %> 
+    <%- include('./partials/about') %>
+    <%- include('./partials/howto') %>
   </main>
 </body>
 </html>
