Add section faq

--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -10,6 +10,7 @@
   <main>
     <%- include('./partials/about') %>
     <%- include('./partials/howto') %>
+    <%- include('./partials/faq') %>
   </main>
 </body>
 </html>
