--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -43,7 +43,7 @@ body {
 
 .bg-image h3 {
   width: 78rem;
-  font-family: 'DM Serif Display', serif;
+  font-family: "DM Serif Display", serif;
   font-weight: 400;
   font-size: 10rem;
   line-height: 100%;
@@ -52,7 +52,7 @@ body {
 }
 
 .btn-banner {
-  font-family: 'Rubik', sans-serif;
+  font-family: "Rubik", sans-serif;
   font-size: 1.6rem;
   font-weight: 700;
   background: #ee4d47;
@@ -191,7 +191,6 @@ body {
   width: 60rem;
 }
 
-
 .how-to-info {
   padding-left: 5.8rem;
   box-sizing: content-box;
@@ -213,4 +212,133 @@ body {
   font-weight: 300;
   line-height: 4rem;
   padding-bottom: 7rem;
+}
+
+/* Faq */
+#faq {
+  background: #fdede8;
+}
+
+.faq-head {
+  display: flex;
+  align-items: center;
+}
+
+.faq-info {
+  padding: 22.4rem 0 16.98rem;
+  display: block;
+  width: 55rem;
+}
+
+.faq-info h4 {
+  color: #ee4d47;
+  font-size: 2.4rem;
+  font-weight: 700;
+  line-height: 4rem;
+  letter-spacing: 0.16rem;
+  text-transform: uppercase;
+  padding-bottom: 4.4rem;
+}
+
+.faq-info p {
+  color: #402b2b;
+  font-family: "DM Serif Display", serif;
+  font-size: 4.8rem;
+  font-weight: 400;
+  line-height: 6.72rem;
+}
+
+.faq-img {
+  width: 62rem;
+}
+
+.faq-list {
+  display: flex;
+  padding-bottom: 10rem;
+}
+
+.faq-list-left {
+  width: 50%;
+  margin-right: 2rem;
+}
+
+.faq-list-right {
+  width: 50%;
+}
+
+input[type="checkbox"] {
+  display: none;
+}
+.wrap-collabsible {
+  margin: 1rem 0;
+}
+
+.lbl-toggle {
+  display: flex;
+  align-items: center;
+  font-weight: 500;
+  font-family: "Rubik", sans-serif;
+  font-size: 1.8rem;
+  text-align: left;
+  padding: 2.5rem 3.5rem;
+  color: #402b2b;
+  background: #fff;
+  box-shadow: 0 2rem 4rem rgba(238, 77, 71, 0.1);
+  cursor: pointer;
+  border-radius: 1rem;
+  transition: all 0.25s ease-out;
+}
+
+.lbl-toggle::after {
+  content: "\02795";
+  margin-left: auto;
+  padding-left: 1rem;
+}
+
+.toggle:checked + .lbl-toggle::after {
+  content: "\2212";
+}
+
+.collapsible-content {
+  max-height: 0px;
+  overflow: hidden;
+  transition: max-height 0.25s ease-in-out;
+}
+
+.toggle:checked + .lbl-toggle + .collapsible-content {
+  max-height: 35rem;
+}
+
+.toggle:checked + .lbl-toggle {
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+}
+
+.collapsible-content .content-inner {
+  background: #FFF7F5;
+  box-shadow: 0px 2rem 4rem rgba(238, 77, 71, 0.1);
+  border-bottom-left-radius: 1rem;
+  border-bottom-right-radius: 1rem;
+  padding: 4rem 3.5rem;
+}
+
+.btn-faq button {
+  display: block;
+  width: 100%;
+  padding: 2.5rem 0;
+  text-align: center;
+  border: none;
+  background: rgba(237, 77, 71, 0.2);
+  color: #ED4D47;
+  border-radius: 1rem;
+  font-weight: 700;
+  font-size: 1.8rem;
+  text-transform: uppercase;
+  cursor: pointer;
+}
+
+.btn-faq button::after {
+  content: "\02795";
+  float: right;
+  padding-right: 3.5rem;
 }
