--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -8,7 +8,7 @@
       <a class="nav-link" href="/#how-to">How To</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="/#faqs">Faqs</a>
+      <a class="nav-link" href="/#faq">Faqs</a>
     </li>
     <button class="btn-header">
       Contact Us
