--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -2,6 +2,8 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <link rel="stylesheet" href="/css/style.css" />
+<link rel="stylesheet" type="text/css" href="/css/glider.min.css" />
+<script src="/js/glider.min.js"></script>
 <style>
   @import url("https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Rubik:wght@300;400;500;700&display=swap");
 </style>
