--- a/src/views/partials/clients.ejs
+++ b/src/views/partials/clients.ejs
@@ -5,12 +5,14 @@
       <p>Out Awesome Clients</p>
     </div>
     <div class="depositions">
-      <button id="g-prev" class="glider-prev">
-        <img src="/img/arrow-l.svg" alt="prev slider"> 
-      </button>
-      <button id="g-next" class="glider-next">
-        <img src="/img/arrow-r.svg" alt="next slider">
-      </button>
+      <div class="controls-slider">
+        <button id="g-prev" class="glider-prev">
+          <img src="/img/arrow-l.svg" alt="prev slider" />
+        </button>
+        <button id="g-next" class="glider-next">
+          <img src="/img/arrow-r.svg" alt="next slider" />
+        </button>
+      </div>
       <div class="glider">
         <div class="card">
           <p>
