--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -10,7 +10,7 @@
     <li class="nav-item">
       <a class="nav-link" href="/#faq">Faqs</a>
     </li>
-    <button class="btn-header">
+    <button class="btn-header" onclick="location.href='#contact';">
       Contact Us
     </button>
   </ul>
