--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -18,7 +18,7 @@ html {
 body {
   font-family: "Rubik", sans-serif;
   font-size: 1.6rem;
-  background: #FEF8F5;
+  background: #fef8f5;
 }
 
 .container {
@@ -317,7 +317,7 @@ input[type="checkbox"] {
 }
 
 .collapsible-content .content-inner {
-  background: #FFF7F5;
+  background: #fff7f5;
   box-shadow: 0px 2rem 4rem rgba(238, 77, 71, 0.1);
   border-bottom-left-radius: 1rem;
   border-bottom-right-radius: 1rem;
@@ -331,7 +331,7 @@ input[type="checkbox"] {
   text-align: center;
   border: none;
   background: rgba(237, 77, 71, 0.2);
-  color: #ED4D47;
+  color: #ed4d47;
   border-radius: 1rem;
   font-weight: 700;
   font-size: 1.8rem;
@@ -377,9 +377,7 @@ input[type="checkbox"] {
 }
 
 .depositions {
-  width: 90rem;
-  position: absolute;
-  left: 39%;
+  width: 80rem;
   padding-top: 6rem;
 }
 
@@ -387,19 +385,16 @@ input[type="checkbox"] {
   overflow: hidden;
 }
 
-#g-next {
-  right: 5.5rem;
-  left: auto;
-}
-
+#g-next,
 #g-prev {
-  left: auto;
-  right: 100px;
+  position: inherit;
+  color: #ee4d47;
+  margin-right: 1rem;
 }
 
-#g-next, #g-prev {
-  color: #ee4d47;
-  top: -1rem;
+.controls-slider {
+  display: flex;
+  justify-content: flex-end;
 }
 
 .card {
@@ -424,4 +419,104 @@ input[type="checkbox"] {
 
 .card-profile span {
   margin-left: 2rem;
+}
+
+/* Footer */
+#contact {
+  padding-top: 6rem;
+}
+
+.footer-content {
+  background-image: url("../img/bg-footer.png");
+  height: 66rem;
+  position: relative;
+  background-repeat: no-repeat;
+}
+
+.footer-img {
+  display: block;
+  margin-bottom: -26px;
+  z-index: 2;
+  position: relative;
+}
+
+.footer-msg {
+  margin-top: 10rem;
+  width: 38rem;
+  border-left: 1rem solid #ed4d47;
+  padding: 1.75rem 0;
+}
+
+.footer-flex {
+  display: flex;
+  position: relative;
+}
+
+.footer-msg p {
+  color: #fff;
+  font-size: 2rem;
+  line-height: 3rem;
+  padding-left: 4rem;
+}
+
+.footer-form {
+  display: block;
+  position: absolute;
+  right: 9.5rem;
+  top: -10rem;
+  border-radius: 1rem;
+  background: #fff;
+  width: 55rem;
+  padding: 5rem 7.5rem 4rem;
+  box-shadow: 0px 20px 40px rgba(238, 77, 71, 0.1);
+  z-index: 10;
+}
+
+.footer-form label {
+  display: block;
+  margin-bottom: 2rem;
+}
+
+.footer-form input,
+textarea {
+  border: 1px solid rgba(238, 77, 71, 0.5);
+  border-radius: 0.5rem;
+  outline: none;
+  font-size: 1.8rem;
+  font-weight: 700;
+  width: 100%;
+  padding: 1.8rem 4rem;
+  margin-bottom: 4rem;
+}
+
+.footer-form input::placeholder,
+textarea::placeholder {
+  font-size: 1.8rem;
+  font-weight: 300;
+}
+
+.footer-form input:focus-within,
+textarea:focus-within {
+  border: 2px solid #ee4d47;
+}
+
+.footer-nav {
+  position: absolute;
+  bottom: 3rem;
+  left: 10%;
+}
+
+.footer-social {
+  display: flex;
+  justify-content: space-between;
+  padding: 5rem 0 9rem;
+}
+
+.footer-icons {
+  margin-right: 9rem;
+}
+
+.footer-social a {
+  text-decoration: none;
+  margin-left: 3rem;
 }
